--- a/style.css
+++ b/style.css
@@ -67,6 +67,10 @@
     border: 3px solid orange;
 }
 
+.bord {
+    broder: 1px solid white;
+}
+
 .other {
     border-bottom-style: 3px gray;
 }
@@ -88,4 +92,18 @@
 
 .halfer {
     width: 50%;
+    padding-left: 5%;
+}
+
+.halfere {
+    width: 50%;
+    padding-left: 25%;
+
+
+}
+
+.halferer {
+    width: 50%;
+    padding-left: 50%;
+    border-radius: 10px;
 }
